<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vikit_py</name>
  <version>0.0.0</version>
  <description>The vikit_py package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Buildtool dependencies are required for the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building and running the package -->
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>